// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectOption (multiple) > should render correctly 1`] = `
<div>
  <button
    class="select-option select-option--0 select-option--active"
    tabindex="0"
  >
    <div
      class="select-option__icon-container"
    >
      <svg
        class="icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="16"
          cy="16"
          r="12.125"
          stroke="currentColor"
          stroke-width="1.75"
        />
        <path
          clip-rule="evenodd"
          d="M20.4838 16.9C20.3785 19.8059 19.7695 22.3582 18.8904 24.1897C17.8697 26.3162 16.7503 27 16 27C15.2497 27 14.1303 26.3162 13.1096 24.1897C12.2305 22.3582 11.6215 19.8059 11.5162 16.9H20.4838ZM21.9847 16.9H28V15.4H21.9932C21.8429 8.77508 19.2172 3.5 16 3.5C12.7828 3.5 10.1571 8.77508 10.0068 15.4H4V16.9H10.0153C10.2367 23.3835 12.8316 28.5 16 28.5C19.1684 28.5 21.7633 23.3835 21.9847 16.9ZM11.5072 15.4C11.58 12.3699 12.2004 9.70454 13.1096 7.81026C14.1303 5.68385 15.2497 5 16 5C16.7503 5 17.8697 5.68385 18.8904 7.81026C19.7996 9.70454 20.42 12.3699 20.4928 15.4H11.5072Z"
          fill="currentColor"
          fill-opacity="0.7"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="select-option__label"
    >
      test 1
    </div>
    <div
      class="select-option__description"
    >
      another test 1
    </div>
    <input
      checked=""
      class="select-option__radio"
      type="radio"
    />
  </button>
  <button
    class="select-option select-option--1"
    tabindex="0"
  >
    <div
      class="select-option__icon-container"
    >
      <svg
        class="icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12H10C8.34315 12 7 13.3431 7 15V24C7 25.6569 8.34315 27 10 27H22C23.6569 27 25 25.6569 25 24V15C25 13.3431 23.6569 12 22 12Z"
          stroke="currentColor"
          stroke-width="1.75"
        />
        <path
          d="M20.56 11.7V9.55096C20.545 8.35297 20.0594 7.20896 19.2078 6.36614C18.3563 5.52332 17.2074 5.04939 16.0093 5.04676C14.8112 5.04414 13.6602 5.51302 12.805 6.3521C11.9498 7.19117 11.4591 8.33305 11.439 9.53096V11.7"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-miterlimit="10"
          stroke-width="1.75"
        />
        <path
          d="M16 17.652V21.352"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-miterlimit="10"
          stroke-opacity="0.7"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <div
      class="select-option__label"
    >
      test 2
    </div>
    <div
      class="select-option__description"
    >
      another test 2
    </div>
    <input
      class="select-option__radio"
      type="radio"
    />
  </button>
</div>
`;

exports[`SelectOption (multiple) should render correctly 1`] = `
<div>
  <button
    class="select-option select-option--0 select-option--active"
    tabindex="0"
  >
    <div
      class="select-option__icon-container"
    >
      <svg>
        open.svg
      </svg>
    </div>
    <div
      class="select-option__label"
    >
      test 1
    </div>
    <div
      class="select-option__description"
    >
      another test 1
    </div>
    <input
      checked=""
      class="select-option__radio"
      type="radio"
    />
  </button>
  <button
    class="select-option select-option--1"
    tabindex="0"
  >
    <div
      class="select-option__icon-container"
    >
      <svg>
        lock-closed.svg
      </svg>
    </div>
    <div
      class="select-option__label"
    >
      test 2
    </div>
    <div
      class="select-option__description"
    >
      another test 2
    </div>
    <input
      class="select-option__radio"
      type="radio"
    />
  </button>
</div>
`;

exports[`SelectOption (single) > should render correctly 1`] = `
<div>
  <button
    class="select-option select-option--0 select-option--active"
    tabindex="0"
  >
    <div
      class="select-option__icon-container"
    >
      <svg
        class="icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="16"
          cy="16"
          r="12.125"
          stroke="currentColor"
          stroke-width="1.75"
        />
        <path
          clip-rule="evenodd"
          d="M20.4838 16.9C20.3785 19.8059 19.7695 22.3582 18.8904 24.1897C17.8697 26.3162 16.7503 27 16 27C15.2497 27 14.1303 26.3162 13.1096 24.1897C12.2305 22.3582 11.6215 19.8059 11.5162 16.9H20.4838ZM21.9847 16.9H28V15.4H21.9932C21.8429 8.77508 19.2172 3.5 16 3.5C12.7828 3.5 10.1571 8.77508 10.0068 15.4H4V16.9H10.0153C10.2367 23.3835 12.8316 28.5 16 28.5C19.1684 28.5 21.7633 23.3835 21.9847 16.9ZM11.5072 15.4C11.58 12.3699 12.2004 9.70454 13.1096 7.81026C14.1303 5.68385 15.2497 5 16 5C16.7503 5 17.8697 5.68385 18.8904 7.81026C19.7996 9.70454 20.42 12.3699 20.4928 15.4H11.5072Z"
          fill="currentColor"
          fill-opacity="0.7"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="select-option__label"
    >
      test
    </div>
    <div
      class="select-option__description"
    >
      another test
    </div>
    <input
      checked=""
      class="select-option__radio"
      type="radio"
    />
  </button>
</div>
`;

exports[`SelectOption (single) should render correctly 1`] = `
<div>
  <button
    class="select-option select-option--0 select-option--active"
    tabindex="0"
  >
    <div
      class="select-option__icon-container"
    >
      <svg>
        open.svg
      </svg>
    </div>
    <div
      class="select-option__label"
    >
      test
    </div>
    <div
      class="select-option__description"
    >
      another test
    </div>
    <input
      checked=""
      class="select-option__radio"
      type="radio"
    />
  </button>
</div>
`;
